etiqueta de google ads

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
   <!-- CSS Animate -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <script src="https://smtpjs.com/v3/smtp.js"></script>
+
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-NKWDK93K');</script>
+  <!-- End Google Tag Manager -->
 </head>
 
 <body>
@@ -471,7 +482,7 @@
               <button id="boton-submit" type="submit" class="btn btn-dark px-4 boton-dorado">Enviar</button>
             </div>
           </form>
-        
+
 
         </div>
       </div>
@@ -481,8 +492,7 @@
     <!-- Boton Whatsapp -->
     <div class="container-wa">
       <div class="floating-button">
-        <a target="_blank" href="https://wa.me/2996037510"
-          id="icono-whatsapp">
+        <a target="_blank" href="https://wa.me/2996037510" id="icono-whatsapp">
           <i class="bi bi-whatsapp icon wa text-white"></i>
         </a>
       </div>
@@ -525,7 +535,8 @@
       </div>
     </div>
     <div class="text-center text-white">
-      <span>Desarrollado por <a href="https://www.instagram.com/ag_webdevelopment/" class="text-gold">AG WebDevelopment</a></span></a>
+      <span>Desarrollado por <a href="https://www.instagram.com/ag_webdevelopment/" class="text-gold">AG
+          WebDevelopment</a></span></a>
     </div>
   </footer>
 
