--- a/index.html
+++ b/index.html
@@ -809,11 +809,11 @@
                                     href="https://wa.me/2996037510"><i
                                         class="bi bi-whatsapp"></i></a>
                                 <a class="nav-link fs-3 pe-4"
-                                    href="https://www.instagram.com/abogadosneuquen_nyj/"><i
+                                    href="https://instagram.com/dr_nordenstrom"><i
                                         class="bi bi-instagram"></i></a>
-                                <a class="nav-link fs-3 pe-4"
+                                <!-- <a class="nav-link fs-3 pe-4"
                                     href="https://www.facebook.com/matias.nordenstrom.56"><i
-                                        class="bi bi-facebook"></i></a>
+                                        class="bi bi-facebook"></i></a> -->
                                 <a class="nav-link fs-3"
                                     href="https://www.linkedin.com/in/matias-ezequiel-correa-nordenstrom-a78083154"><i
                                         class="bi bi-linkedin"></i></a>
