--- a/index.html
+++ b/index.html
@@ -824,8 +824,8 @@
                 </div>
                 <div class="text-center text-white">
                     <span>Desarrollado por <a
-                            href="https://www.instagram.com/ag_webdevelopment/"
-                            class="text-gold">AG WebDevelopment</a></span></a>
+                            href="https://www.instagram.com/ag_desarrolloweb//"
+                            class="text-gold">AG Desarrollo Web</a></span></a>
             </div>
         </footer>
 
