nuevo sistema de email

--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                 </div>
                 <div class="text-center text-white">
                     <span>Desarrollado por <a
-                            href="https://www.instagram.com/ag_desarrolloweb//"
+                            href="https://www.instagram.com/ag_desarrolloweb/"
                             class="text-gold">AG Desarrollo Web</a></span></a>
             </div>
         </footer>
